--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 site_name: My Docs
 repo_url: https://github.com/Chocolateater/FD-Class
 repo_name: Chocolateater/FD-Class
-edit_uri: edit/main/docs/
+edit_uri: edit/master/docs/
 theme:
   name: material
   features:
