--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: My Docs
 repo_url: https://github.com/Chocolateater/FD-Class
-edit_uri: edit/master/docs/
+edit_uri: 'https://github.com/Chocolateater/FD-Class/edit/master/docs/'
 theme:
   name: material
   features:
