--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,7 +6,9 @@ nav:
   - Levels: 
     - Level: 'Level_index.md'
     - Level 0-10: 
-      - Level 0: 'Level_FD-0.md'
+      - Level 0: 
+        - Level 0 Main: 'Level_FD-0.md'
+        - Level 0.1: 'Level_FD-0.1.md'
     
 theme:
   name: material
