--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,6 +15,8 @@ nav:
       - Level 32: 
         - Level 32 Main: 'Level_FD-32.md'
         - Level 32.5: 'Level_FD-32.5.md'
+  - object:
+    - 二代驱笑剂: '二代驱笑剂.md'
     
 theme:
   name: material
