--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,7 +15,10 @@ nav:
       - Level 32: 
         - Level 32 Main: 'Level_FD-32.md'
         - Level 32.5: 'Level_FD-32.5.md'
-  - object:
+  - Entites:
+    - Entity: 'Entity_index.md'
+  - Objects:
+    - Object: 'Object_index.md'
     - 二代驱笑剂: '二代驱笑剂.md'
     
 theme:
