--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,6 +15,8 @@ nav:
       - Level 32: 
         - Level 32 Main: 'Level_FD-32.md'
         - Level 32.5: 'Level_FD-32.5.md'
+    - Level 41-50:
+      - Level 45: 'Level_FD-45.md'
   - Entites:
     - Entity: 'Entity_index.md'
   - Objects:
