--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,7 +6,7 @@ nav:
     - Getting Started: 'index.md'
     - Rules: 'Rules.md'
     - 如何参与: 'Joinin.md'
-    - 格式手册: 'Stylemanual.md'
+    - 格式手册: 'Format.md'
   - Levels: 
     - Level: 'Level_index.md'
     - Level 0-10: 
