--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,7 +13,9 @@ nav:
       - Level 0: 
         - Level 0 Main: 'Level_FD-0.md'
         - Level 0.1: 'Level_FD-0.1.md'
-    #- Level 11-20:
+      - Level 5: 'Level_FD-5.md'
+    - Level 11-20:
+      - Level 11: 'Level_FD-11.md'
     #- Level 21-30:
     - Level 31-40:
       - Level 32: 
@@ -21,6 +23,9 @@ nav:
         - Level 32.5: 'Level_FD-32.5.md'
     - Level 41-50:
       - Level 45: 'Level_FD-45.md'
+    - Other Levels: 
+      - Level 218: 'Level_FD-218.md'
+      - Level 2001: 'Level_FD-2001.md'
   - Entites:
     - Entity: 'Entity_index.md'
   - Objects:
