--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,6 +26,7 @@ nav:
     - Other Levels: 
       - Level 218: 'Level_FD-218.md'
       - Level 2001: 'Level_FD-2001.md'
+      - Level Head To Head: 'Head_To_Head.md'
   - Entites:
     - Entity: 'Entity_index.md'
   - Objects:
