--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,7 @@ nav:
     - Rules: 'Rules.md'
     - 如何参与: 'Joinin.md'
     - 格式手册: 'Format.md'
+    - 加入我们: 'Joinus.md'
   - Levels: 
     - Level: 'Level_index.md'
     - Level 0-10: 
