--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -58,18 +58,9 @@ theme:
       repository: Chocolateater/FD-Class
       enabled: !ENV [CI]
   palette:
-    primary: white
-    scheme: 
-      - scheme: default
-        toggle:
-          icon: material/brightness-7 
-          name: Switch to dark mode
-
-      # Palette toggle for dark mode
-      - scheme: slate
-        toggle:
-          icon: material/brightness-4
-          name: Switch to light mode
+    primary: black
+    accent: indigo
+    scheme: slate
 
 markdown_extensions:
   - admonition
