--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@ nav:
       - Level 0: 
         - Level 0 Main: 'Levels/Level_FD-0.md'
         - Level 0.1: 'Levels/Level_FD-0.1.md'
+      -Level 1:'Levels/Level_FD-1.md'
       - Level 5: 'Levels/Level_FD-5.md'
     - Level 11-20:
       - Level 11: 'Levels/Level_FD-11.md'
