--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,15 +12,16 @@ nav:
     - Level: 'Levels/Level_index.md'
     - Level 0-10: 
       - Level 0: 
-        - Level 0 Main: 'Levels/Level_FD-0.md'
+        - Level 0: 'Levels/Level_FD-0.md'
         - Level 0.1: 'Levels/Level_FD-0.1.md'
+      - Level 1: 'Levels/Level_FD-1.md'
       - Level 5: 'Levels/Level_FD-5.md'
     - Level 11-20:
       - Level 11: 'Levels/Level_FD-11.md'
     #- Level 21-30:
     - Level 31-40:
       - Level 32: 
-        - Level 32 Main: 'Levels/Level_FD-32.md'
+        - Level 32: 'Levels/Level_FD-32.md'
         - Level 32.5: 'Levels/Level_FD-32.5.md'
     - Level 41-50:
       - Level 45: 'Levels/Level_FD-45.md'
