--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -34,6 +34,7 @@ nav:
   - 实体 Entites:
     - Entity: 'Entities/Entity_index.md'
     - Entity 1: 'Entities/Entity_1_Loster.md'
+    - Entity 5: 'Entities/Entity_5_Mom.md'
   - 物品 Objects:
     - Object: 'Objects/Object_index.md'
     - Coffee: 'Objects/Coffee.md'
