--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -30,6 +30,7 @@ nav:
       - Level 218: 'Levels/Level_FD-218.md'
       - Level 418: 'Levels/Level_FD-418.md'
       - Level 2001: 'Levels/Level_FD-2001.md'
+      - Level Ending: 'Levels/Level_Ending.md'
       - Level Head To Head: 'Levels/Head_To_Head.md'
   - 实体 Entites:
     - Entity: 'Entities/Entity_index.md'
